--- a/auth-functions/package.json
+++ b/auth-functions/package.json
@@ -11,23 +11,23 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "16"
+    "node": "18"
   },
-  "main": "lib/index.js",
+  "main": "lib/src/index.js",
   "dependencies": {
-    "firebase-admin": "^11.5.0",
-    "firebase-functions": "^4.2.0",
-    "joi": "^17.9.1"
+    "firebase-admin": "^11.10.1",
+    "firebase-functions": "^4.4.1",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "eslint": "^8.9.0",
+    "@types/joi": "^17.2.3",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
+    "eslint": "^8.50.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.25.4",
-    "firebase-functions-test": "^3.0.0",
-    "typescript": "^4.9.0",
-    "@types/joi": "^17.2.3"
+    "eslint-plugin-import": "^2.28.1",
+    "firebase-functions-test": "^3.1.0",
+    "typescript": "^5.2.2"
   },
   "private": true
 }
